--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="wrap">
                     <div class="fix-12-12">
                         <div class="fix-10-12 margin-top-2">
-                            <h1 class="ae-1 fronLeft">Rene Kärkkäinen e</h1>
+                            <h1 class="ae-1 fronLeft">Rene Kärkkäinen</h1>
                             <div class="typewriter">
                                 <div class="light ae-1 fromrRight">
                                     <p id="typing-text" class="opacity-8"></p>
