--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             <div class="sections desktop">
                 <div class="left">
                     <ul class="menu uppercase">
-                        <li><a class="light ae-6 fromBottom" href="pgp.html">EMAIL PGP KEY...</a></li>
+                        <li><a class="light ae-6 fromBottom" href="pgp.html">EMAIL PGP KEY</a></li>
                         <li><a class="light ae-6 fromBottom" href="cv/index.html">TERMINAL CV</a></li>
                     </ul>
                 </div>
