--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 <div class="light ae-1 fromrRight">
                                     <p id="typing-text" class="opacity-8"></p>
                                     <a href="#contact" class="button primary-button cropBottom ae-7 fromCenter"><i class="fa fa-envelope-o" aria-hidden="true"></i> Contact</a>
-                                    <a href="cv/index.html" class="button primary-button cropBottom ae-7 fromCenter"><i class="fa fa-file-text-o" aria-hidden="true"></i> CV</a>
+                                    <a href="cv/index.html" class="button primary-button cropBottom ae-7 fromCenter"><i class="fa fa-file-text-o" aria-hidden="true"></i> Terminal CV</a>
                                 </div>
                             </div>
                         </div>
