Remove former company name

--- a/cv/rene.html
+++ b/cv/rene.html
@@ -3,7 +3,7 @@
 <p>
   Hello! I'm <span id="k">Rene Kärkkäinen</span>, a student at Business College Helsinki, pursuing a vocational degree in IT while juggling high school. I thrive on a blend of academic knowledge and hands-on experience.
 
-  Passionate about cyber security, I've acquired skills in encryption, authentication, and network security through various courses and certificates. My professional journey includes valuable experience at WithSecure (formerly F-Secure), a leading cyber security company in the Nordics.
+  Passionate about cyber security, I've acquired skills in encryption, authentication, and network security through various courses and certificates. My professional journey includes valuable experience at WithSecure, a leading cyber security company in the Nordics.
 
   At home, I've built a robust server network from scratch. A physical server running ESXi serves as the backbone, fortified with pfSense as the firewall, OpenVPN servers for remote access, DHCP, DNS, and Suricata for intrusion detection. I've organized the network using VLANs, creating isolated environments for different purposes.
 
