Lots of updates
Removed unnecessary files, added info about home lab and updated project page to fetch the text from media/README.md

--- a/cv/rene.html
+++ b/cv/rene.html
@@ -11,7 +11,7 @@
 
   Each server operates on designated networks—Web Server on "Secure", Testing Servers on "Unsecure," and ESXi, pfSense, and TrueNAS on "Trusted". I've established my certificate authority, adding a layer of security by creating certificates for all the servers. This hands-on experience has honed my skills in network configuration, DNS troubleshooting, DHCP management, and system troubleshooting.
  
-  Actively seeking global IT opportunities, particularly in cyber security, data analysis, or machine learning, I bring a quick learning ability, effective problem-solving skills, and strong teamwork. Explore my projects on <a href="../index.html" target="_blank">karkkainen.net</a> or delve into my tech side on GitHub <a href="../r/github.html" target="_blank">GitHub.com/JAAKKQ</a>.
+  Actively seeking global IT opportunities, particularly in cyber security, data analysis, or machine learning, I bring a quick learning ability, effective problem-solving skills, and strong teamwork. Explore my projects on <a href="../index.html">karkkainen.net</a> or delve into my tech side on GitHub <a href="../r/github.html">GitHub.com/JAAKKQ</a>.
 
-  Connect with me on <a href="../r/linkedin.html" target="_blank">LinkedIn.com/n/ReneKarkkainen</a> or drop me an email at <a href="mailto: rene@karkkainen.net">rene@karkkainen.net</a>. <b>Thank you for reading!</b>
+  Connect with me on <a href="../r/linkedin.html">LinkedIn.com/n/ReneKarkkainen</a> or drop me an email at <a href="mailto: rene@karkkainen.net">rene@karkkainen.net</a>. <b>Thank you for reading!</b>
 </p>
