--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
                             <div class="typewriter">
                                 <div class="light ae-1 fromrRight">
                                     <p id="typing-text" class="opacity-8"></p>
-                                    <a href="#contact" class="button primary-button cropBottom ae-7 fromCenter"><i class="fa fa-envelope-o" aria-hidden="true"></i> Contact</a>
-                                    <a href="cv/index.html" class="button primary-button cropBottom ae-7 fromCenter"><i class="fa fa-file-text-o" aria-hidden="true"></i> Terminal CV</a>
+                                    <a href="#contact" class="button primary-button cropBottom ae-7 fromCenter"><i
+                                            class="fa fa-envelope-o" aria-hidden="true"></i> Contact</a>
+                                    <a href="cv/index.html" class="button primary-button cropBottom ae-7 fromCenter"><i
+                                            class="fa fa-file-text-o" aria-hidden="true"></i> Terminal CV</a>
                                 </div>
                             </div>
                         </div>
@@ -72,45 +74,34 @@
         <div class="background" style="background-image: url(assets/img/background/hacker-background.gif)"></div>
     </section>
 
-    <!-- Exchange (#73) -->
-    <section data-name="exchange" class="slide fade-6 kenBurns">
+    <section data-name="HomeLab" class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
                 <div class="wrap">
                     <div class="fix-11-12">
                         <ul class="flex reverse">
-                            <script>
-                                fetch("stats.json")
-                                    .then(response => response.json())
-                                    .then(data => {
-                                        //document.querySelector('#BotDynDescription').innerHTML = "Currently serving " + data.serverCount + " Discord servers with " + data.memberCount + " users in total."
-                                    })
-                            </script>
-                            <li class="col-6-30 left box-73">
-                                <h1 class="ae-2">Cryptocurrency exchange</h1>
-                                <p class="ae-3"><span class="opacity-8"></span>Created a cryptocurrency exchange where
-                                    user uses fake money to buy cryptocurrencies and learn about them. First
-                                    wrote in JavaScript, later wanted to learn Python so I
-                                    rewrote it in Python. The interface can be integrated easily to websites but I have
-                                    created a Discord bot to attract the younger people.
+                            <li class="col-6-12 left box-73">
+                                <h1 class="ae-2">Home Lab</h1>
+                                <p class="ae-3"><span class="opacity-8"></span>Equipped with a wealth of skills in networking and server management, my home lab stands as a testament to hands-on expertise. Step into a realm where every challenge is an opportunity for skill refinement, and the synergy of servers and networks defines a unique digital domain.
                                 </p>
-                                <a href="https://discord.com/api/oauth2/authorize?client_id=940968101627969598&permissions=277025410048&scope=bot%20applications.commands"
-                                    target="_blank" class="button primary-button cropBottom ae-7 fromCenter"><i class="fa fa-plus-square-o" aria-hidden="true"></i>
-                                    Invite Bot</a>
-                                <a href="https://top.gg/bot/940968101627969598" target="_blank"
-                                    class="button primary-button cropBottom ae-7 fromCenter"><i class="fa fa-plus-square-o" aria-hidden="true"></i>
-                                    Top.gg</a>
-                                <a href="https://github.com/JAAKKQ/pyexhange" target="_blank"
-                                    class="button primary-button cropBottom ae-7 fromCenter"><i class="fa fa-download" aria-hidden="true"></i>
-                                    Source</a>
+                                <a href="projects/open.html?project=karkkainen.net"
+                                    class="button primary-button cropBottom ae-7 fromCenter"><i class="fa fa-book" aria-hidden="true"></i>
+                                    Learn More</a>
+                            </li>
+                            <li class="col-1-12">&nbsp;</li>
+                            <li class="col-5-12 fromCenter center">
+                                <img src="assets/img/server1.png" data-action="zoom" class="shadow rounded ae-8"
+                                    alt="Image" />
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="background" style="background-image:url(assets/img/background/img-73.jpg)"></div>
+        <div class="background" style="background-image: url(media/kaapelia.jpg) "></div>
     </section>
+
+
     <!-- Games (#89) -->
     <section data-name="Beryllium" class="slide fade-3 kenBurns">
         <div class="content">
@@ -131,7 +122,7 @@
                                 </div>
                             </li>
                             <li class="col-1-12">&nbsp;</li>
-                            <li class="col-5-12 bottom">
+                            <li class="col-5-12 bottom center">
                                 <img src="assets/img/BerylliumPromo.jpg" data-action="zoom" class="shadow rounded ae-8"
                                     alt="Image" />
                                 <br><br>
@@ -164,12 +155,13 @@
                                         outlets using 3D printing, Arduino Nano, RTC module and a 28BYJ48 stepper motor.
                                     </p>
                                 </div>
-                                <a href="projects/open.html?project=PP-215" target="_blank"
-                                    class="button primary-button  cropBottom ae-7 fromCenter"><i class="fa fa-external-link" aria-hidden="true"></i>
+                                <a href="projects/open.html?project=PP-215"
+                                    class="button primary-button  cropBottom ae-7 fromCenter"><i class="fa fa-book"
+                                        aria-hidden="true"></i>
                                     Learn More</a>
                             </li>
                             <li class="col-1-12">&nbsp;</li>
-                            <li class="col-5-12 bottom">
+                            <li class="col-5-12 bottom center">
                                 <img src="assets/img/pp-215.png" data-action="zoom" class="shadow rounded ae-8"
                                     alt="Image" />
                             </li>
@@ -194,15 +186,18 @@
                                     <p class="opacity-8">Program to keep track of my vinyl record collection.
                                     </p>
                                 </div>
-                                <a href="./records/index.html" target="_blank"
-                                    class="button primary-button  cropBottom ae-7 fromCenter"><i class="fa fa-external-link" aria-hidden="true"></i> Demo</a>
+                                <a href="./records/index.html"
+                                    class="button primary-button  cropBottom ae-7 fromCenter"><i class="fa fa-play"
+                                        aria-hidden="true"></i> Demo</a>
                                 <a href="https://github.com/JAAKKQ/Vinyl-Manager/" target="_blank"
-                                    class="button primary-button  cropBottom ae-7 fromCenter"><i class="fa fa-download" aria-hidden="true"></i>
+                                    class="button primary-button  cropBottom ae-7 fromCenter"><i class="fa fa-download"
+                                        aria-hidden="true"></i>
                                     Source</a>
-                                <a href="projects/open.html?project=Vinyl-Manager" target="_blank"
-                                    class="button primary-button  cropBottom ae-7 fromCenter"><i class="fa fa-external-link" aria-hidden="true"></i> Learn More</a>
+                                <a href="projects/open.html?project=Vinyl-Manager"
+                                    class="button primary-button  cropBottom ae-7 fromCenter"><i class="fa fa-book"
+                                        aria-hidden="true"></i> Learn More</a>
                             <li class="col-1-12">&nbsp;</li>
-                            <li class="col-5-12 bottom">
+                            <li class="col-5-12 bottom center">
                                 <img src="assets/img/Screenshot-vinyldb-console.png" data-action="zoom"
                                     class="shadow rounded ae-8" alt="Image" />
                                 <br><br>
@@ -232,16 +227,16 @@
                         </p>
                     </div>
                     <div class="fix-9-12">
-                        <a href="r/linkedin.html" target="_blank" class="button hollow ae-2"><img
-                                src="assets/img/LI-Logo.png" height="50" /></a>
+                        <a href="r/linkedin.html" class="button hollow ae-2"><img src="assets/img/LI-Logo.png"
+                                height="50" /></a>
                     </div>
                     <div class="fix-9-12">
-                        <a href="r/github.html" target="_blank" class="button hollow ae-2"><img
-                                src="assets/img/GitHub_Logo_White.png" height="63" /></a>
+                        <a href="r/github.html" class="button hollow ae-2"><img src="assets/img/GitHub_Logo_White.png"
+                                height="63" /></a>
                     </div>
                     <div class="fix-9-12">
-                        <a href="r/x.html" target="_blank" class="button hollow ae-2"><img
-                                src="assets/img/x-logo-white.png" height="63" /></a>
+                        <a href="r/x.html" class="button hollow ae-2"><img src="assets/img/x-logo-white.png"
+                                height="63" /></a>
                     </div>
                 </div>
             </div>
@@ -257,7 +252,7 @@
                     </ul>
                 </div>
             </div>
-        </nav> 
+        </nav>
     </section>
     <!-- Loading Progress Bar -->
     <div class="progress-bar darkGreen"></div>
