--- a/cards/v1/index.html
+++ b/cards/v1/index.html
@@ -7,6 +7,6 @@
     <meta http-equiv="refresh" content="0; url = https://karkkainen.net/cv">
 </head>
 <body>
-    
+    Redirecting to karkkainen.net/cv
 </body>
 </html>
