--- a/projects/open.html
+++ b/projects/open.html
@@ -18,9 +18,6 @@
             <a href="../index.html">Main Page</a>
         </li>
         <li>
-            <a href="index.html">Projects</a>
-        </li>
-        <li>
             <a href="../records/index.html">Vinyl Records</a>
         </li>
     </ul>
@@ -29,7 +26,7 @@
 <body>
 
     <div class="main-container">
-        <a id="project-link" href="index.html">Projects > Project 1</a>
+        <a id="project-link" href="#">Projects > Project 1</a>
         <div class="flex-container">
             <div class="content">
                 <div class="image-container">
