Updates to home lab desc

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="background" style="background-image: url(assets/img/background/be_bacground.png) "></div>
     </section>
 
-    <!-- PP-215 (#89) -->
+    <!-- PP-215 (#89)
     <section data-name="JP-215" class="slide fade-6 kenBurns" id="3d">
         <div class="content">
             <div class="container">
@@ -172,7 +172,7 @@
             </div>
         </div>
         <div class="background" style="background-image: url(assets/img/background/vinyl-player.jpg) "></div>
-    </section>
+    </section> -->
     <!--vinylDB-->
     <section data-name="vinylDB" class="slide fade-6 kenBurns">
         <div class="content">
