--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </nav>
 
-    <!-- Home (#82) -->
+    <!-- Home -->
     <section data-name="Home" class="slide fade-6 kenBurns">
         <div class="content">
 
@@ -102,7 +102,7 @@
     </section>
 
 
-    <!-- Games (#89) -->
+    <!-- Games -->
     <section data-name="Beryllium" class="slide fade-3 kenBurns">
         <div class="content">
             <div class="container">
@@ -138,7 +138,7 @@
         <div class="background" style="background-image: url(assets/img/background/be_bacground.png) "></div>
     </section>
 
-    <!-- PP-215 (#89)
+    <!-- PP-215 -->
     <section data-name="JP-215" class="slide fade-6 kenBurns" id="3d">
         <div class="content">
             <div class="container">
@@ -172,8 +172,9 @@
             </div>
         </div>
         <div class="background" style="background-image: url(assets/img/background/vinyl-player.jpg) "></div>
-    </section> -->
-    <!--vinylDB-->
+    </section>
+
+    <!-- Vinyl Manager -->
     <section data-name="vinylDB" class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
@@ -214,7 +215,8 @@
         </div>
         <div class="background" style="background-image: url(assets/img/background/record-store.jpg) "></div>
     </section>
-    <!-- End (#95) -->
+
+    <!-- Contact -->
     <section data-name="contact" class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
@@ -255,7 +257,6 @@
     </section>
     <!-- Loading Progress Bar -->
     <div class="progress-bar darkGreen"></div>
-
     <script src="js/3d.js" type="text/javascript"></script>
 </body>
 
