--- a/records/index.html
+++ b/records/index.html
@@ -33,6 +33,7 @@
         <button class="filter-button" onclick="searchByGenre('rock')">Rock</button>
         <button class="filter-button" onclick="searchByGenre('Hip Hop')">Hip Hop</button>
         <button class="filter-button" onclick="searchByGenre('Jazz')">Jazz</button>
+        <button class="filter-button" onclick="searchByGenre('classical')">Classical</button>
         <button class="filter-button" onclick="searchByGenre('Electronic')">Electronic</button>
         <button class="filter-button" onclick="searchByGenre('Latin')">Latin</button>
         <button class="filter-button" onclick="searchByGenre('Reggae')">Reggae</button>
