Updates to Home Lab project

--- a/index.html
+++ b/index.html
@@ -78,14 +78,15 @@
         <div class="content">
             <div class="container">
                 <div class="wrap">
-                    <div class="fix-11-12">
+                    <div class="fix-12-12">
                         <ul class="flex reverse">
                             <li class="col-6-12 left box-73">
                                 <h1 class="ae-2">Home Lab</h1>
-                                <p class="ae-3"><span class="opacity-8"></span>Equipped with a wealth of skills in
-                                    networking and server management, my home lab stands as a testament to hands-on
-                                    expertise. Step into a realm where every challenge is an opportunity for skill
-                                    refinement, and the synergy of servers and networks defines a unique digital domain.
+                                <p class="ae-3"><span class="opacity-8"></span>
+                                    From flushing Nokia down the toilet to creating a game with more bugs than
+                                    features, join me on a chaotic journey into IT. Witness the epic saga of upgrading
+                                    from 4G to 5G, battling BIOS mishaps, and turning a roaring server into a ninja
+                                    whisperer.
                                 </p>
                                 <a href="projects/open.html?project=karkkainen.net"
                                     class="button primary-button cropBottom ae-7 fromCenter"><i class="fa fa-book"
@@ -115,8 +116,13 @@
                             <li class="col-6-12 fromBottomLeft">
                                 <h1 class="ae-2">FPS Multiplayer game</h1>
                                 <div class="ae-3">
-                                    <p class="opacity-8">In 2021 I made a FPS multiplayer game with Unreal Engine 4 that aimed to emulate the experience of the renowned CS:GO. This endeavor provided invaluable insights into the complexities of networking in multiplayer games, unraveling the challenges that developers encounter.</p>
-                                    <p class="opacity-8">This was my first big coding project and one profound takeaway from this experience is the realization that substantial code changes may manifest as seemingly minor adjustments for end-users.</p>
+                                    <p class="opacity-8">In 2021 I made a FPS multiplayer game with Unreal Engine 4 that
+                                        aimed to emulate the experience of the renowned CS:GO. This endeavor provided
+                                        invaluable insights into the complexities of networking in multiplayer games,
+                                        unraveling the challenges that developers encounter.</p>
+                                    <p class="opacity-8">This was my first big coding project and one profound takeaway
+                                        from this experience is the realization that substantial code changes may
+                                        manifest as seemingly minor adjustments for end-users.</p>
                                 </div>
                             </li>
                             <li class="col-1-12">&nbsp;</li>
@@ -182,7 +188,8 @@
                                 <div class="ae-3">
                                     <p class="opacity-8">This code is a Python implementation of a basic wallet system
                                         that allows users to buy, sell, and transfer currencies. It includes a JSON
-                                        database to store user information and currency balances. This Python library is intended to be integrated to a front-end like Discord or Telegram.
+                                        database to store user information and currency balances. This Python library is
+                                        intended to be integrated to a front-end like Discord or Telegram.
                                     </p>
                                 </div>
                                 <a href="https://github.com/jaakkq/pyexchange" target="_blank"
