--- a/projects/open.html
+++ b/projects/open.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
     <link rel="stylesheet" href="open.css">
-    <title>R3ne's Project List</title>
+    <title>Rene's Projects</title>
 </head>
 
 <header>
