--- a/public/r/linkedin.html
+++ b/public/r/linkedin.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=§, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=§, initial-scale=1.0" />
     <title>LinkedIn Redirect</title>
-    <meta name="robots" content="noindex, nofollow">
-    <meta http-equiv="refresh" content="0; url = https://www.linkedin.com/in/renekarkkainen/">
-</head>
-<body>
+    <meta name="robots" content="noindex, nofollow" />
+    <meta http-equiv="refresh" content="0; url = https://www.linkedin.com/in/renekarkkainen/" />
+  </head>
+  <body>
     Redirecting to https://www.linkedin.com/in/renekarkkainen/
-</body>
+  </body>
 </html>
