--- a/public/r/teams.html
+++ b/public/r/teams.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=§, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=§, initial-scale=1.0" />
     <title>Microsoft Teams Redirect</title>
-    <meta name="robots" content="noindex, nofollow">
-    <meta http-equiv="refresh" content="0; url = https://teams.microsoft.com/l/chat/0/0?users=Rene@Karkkainen.net">
-</head>
-<body>
+    <meta name="robots" content="noindex, nofollow" />
+    <meta http-equiv="refresh" content="0; url = https://teams.microsoft.com/l/chat/0/0?users=Rene@Karkkainen.net" />
+  </head>
+  <body>
     Redirecting to https://teams.microsoft.com/l/chat/0/0?users=Rene@Karkkainen.net
-</body>
+  </body>
 </html>
