--- a/public/r/x.html
+++ b/public/r/x.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=§, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=§, initial-scale=1.0" />
     <title>X.COM Redirect</title>
-    <meta name="robots" content="noindex, nofollow">
-    <meta http-equiv="refresh" content="0; url = https://x.com/karkkainen_net">
-</head>
-<body>
+    <meta name="robots" content="noindex, nofollow" />
+    <meta http-equiv="refresh" content="0; url = https://x.com/karkkainen_net" />
+  </head>
+  <body>
     Redirecting to https://x.com/karkkainen_net
-</body>
+  </body>
 </html>
